fixed spacing on curiosities with flexbox

--- a/styles.css
+++ b/styles.css
@@ -106,14 +106,24 @@ body {
   background-color: white;
   border-radius: 20px;
   border: 1px solid black;
-  margin-top: 50px;
-  display: inline-block;
-  margin-left: 10%;
+  margin: 50px;
+  /* display: inline-block;
+  margin-left: 10%; */
+}
+
+.all_box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 
 .cur_label {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: row;
+}
+
+.cur_label h3 {
+  margin: 0 150px;
 }
